<resources>
    <string name="app_name">Qwirkers</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="clear">Clear</string>
    <string name="trade">Trade</string>
    <string name="pass">Pass</string>
    <string name="blank">_</string>
    <string name="intro">The game you can have fun with friends and test your brain.</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="rules">Rules</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="player_count_modal_title">How many are playing?</string>
    <string name="offline_lobby">Offline Lobby</string>
    <string name="offline_lobby_message">Other players are waiting for you</string>
    <string name="offline_lobby_instructions">Enter name and select character </string>
    <string name="trade_dialog_text">Select all the tiles you want to swap from your hand</string>
    <string name="player_name_hint">Player name</string>

    <string-array name="numbers">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>