<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/trade_deck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/neutral_100"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/hand_deck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/intro_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="64dp"
                android:gravity="center"
                android:text="@string/trade_dialog_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trade_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intro_home" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/trade"
        style="@style/Widget.Material3.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background_game"
        android:drawableTop="@drawable/ic_trade"
        android:drawableTint="@color/highlight"
        android:onClick="done"
        android:padding="2dp"
        android:text="@string/trade"
        android:textColor="@color/black"
        android:textSize="@dimen/button_font_size"
        app:backgroundTint="@color/neutral_100"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trade_deck" />

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.Material3.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background_game"
        android:drawableTop="@drawable/ic_x_close"
        android:drawableTint="@color/highlight"
        android:onClick="done"
        android:padding="2dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/button_font_size"
        app:backgroundTint="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/trade"
        app:layout_constraintTop_toTopOf="@+id/trade" />

    <androidx.cardview.widget.CardView
        android:id="@+id/hand_deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/neutral_100"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/player_hand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>